Revision history for Perl extension Tree::MultiNode.

1.0.11 
  - Convert module to standart treee layout.
  - Convert to Test::More suite with additional tests
  - Generat META.yml file from new Build.PL data
  - RT #5107 - Documentation patch for Tree-MultiNode-1.0.10
  - RT #1743 - Documentation fix for traverse example to be consistent with code

1.0.10 Tue May 27 14:06:33 EDT 2003
  KRB: Markus Maier <maier.m@web.de> found a bug in the tree's destructor
    that happens when a reference to a handle outlives the tree object.
    $self->{'top'} is then undefined and _clearrefs should not be called
    (a second time).
  KRB: fixed documentaiton bug (set_key/set_value), added use strict and 
    warnings to the example in the POD.

1.0.9 Tue Oct  8 20:38:52 EDT 2002
  KRB: Gregg Casillo <gcasillo@ket.org> sent in a fix that now allows
    keys to store the numeric value 0.
  KRB: fixed reported bug with traverse not passing the new handle.

1.0.8 Wed May  8 10:06:22 EDT 2002
  KRB: Papp Zoltan <padre@inf.elte.hu> pointed out a bug in
    Tree::MultiNode::Node's _clearrefs() where an array ref was
    not being dereferenced correctly.  The fix has been applied.

1.0.7 Tue Nov 13 09:00:49 EST 2001
  KRB: "Tunkelo Heikki (extern)" <Heikki.Tunkelo@erln.gepas.de> 
       subumitted a patch that fixed the select() method.

1.0.6 Wed Dec 13 11:43:11 EST 2000
  KRB: traverse was created because of comments from
          Sverrir Jonsson <Sverrir.Jonsson@net-linx-ps.com>

1.0.5 Wed Dec 13 11:32:57 EST 2000
  KRB: updated traverse so you can pass additional constant arguments
          to the sub ref.

1.0.4 Wed Dec 13 11:03:17 EST 2000
  KRB: added Tree::MultiNode::Handle::traverse as a method that takes
          a sub ref and invokes the subref for each node in the tree.

1.0.3 Thu Sep  7 11:57:14 EDT 2000
  KRB: added Tree::MultiNode::DESTROY, and Tree::MultiNode::Node::_clearrefs
          so the refcounts of the nodes, as well as the data will go to